Fixed text aligned footer issue on small screens

--- a/public/css/_footer.scss
+++ b/public/css/_footer.scss
@@ -15,4 +15,10 @@
       }
     }
   }
+
+  @media (min-width: 992px) {
+    .social {
+      text-align: right;
+    }
+  }
 }
